@@ -371,6 +371,36 @@ name|isDynamic
 argument_list|(
 name|mrid1
 argument_list|)
+operator|&&
+name|vmatcher
+operator|.
+name|isDynamic
+argument_list|(
+name|mrid2
+argument_list|)
+condition|)
+block|{
+return|return
+name|vmatcher
+operator|.
+name|compare
+argument_list|(
+name|mrid1
+argument_list|,
+name|mrid2
+argument_list|,
+name|mridComparator
+argument_list|)
+return|;
+block|}
+if|else if
+condition|(
+name|vmatcher
+operator|.
+name|isDynamic
+argument_list|(
+name|mrid1
+argument_list|)
 condition|)
 block|{
 name|int
