@@ -1520,6 +1520,74 @@ argument_list|(
 name|qName
 argument_list|)
 expr_stmt|;
+comment|// according to ivy.xsd, all<dependency> elements must occur before
+comment|// the<exclude>,<override> or<conflict> elements
+if|if
+condition|(
+name|options
+operator|.
+name|isMerge
+argument_list|()
+operator|&&
+operator|(
+literal|"exclude"
+operator|.
+name|equals
+argument_list|(
+name|localName
+argument_list|)
+operator|||
+literal|"override"
+operator|.
+name|equals
+argument_list|(
+name|localName
+argument_list|)
+operator|||
+literal|"conflict"
+operator|.
+name|equals
+argument_list|(
+name|localName
+argument_list|)
+operator|)
+operator|&&
+literal|"ivy-module/dependencies"
+operator|.
+name|equals
+argument_list|(
+name|getContext
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|ModuleDescriptor
+name|merged
+init|=
+name|options
+operator|.
+name|getMergedDescriptor
+argument_list|()
+decl_stmt|;
+name|writeInheritedDependencies
+argument_list|(
+name|merged
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|println
+argument_list|()
+expr_stmt|;
+name|out
+operator|.
+name|print
+argument_list|(
+name|getIndent
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|context
 operator|.
 name|push
