@@ -291,17 +291,90 @@ name|Comparator
 name|staticComparator
 parameter_list|)
 block|{
+if|if
+condition|(
+name|isDynamic
+argument_list|(
+name|askedMrid
+argument_list|)
+operator|&&
+operator|!
+name|isDynamic
+argument_list|(
+name|foundMrid
+argument_list|)
+condition|)
+block|{
 return|return
 name|needModuleDescriptor
 argument_list|(
 name|askedMrid
 argument_list|,
-name|foundMrid
+literal|null
 argument_list|)
 condition|?
 literal|0
 else|:
 literal|1
+return|;
+block|}
+name|String
+name|askedStatus
+init|=
+name|askedMrid
+operator|.
+name|getRevision
+argument_list|()
+operator|.
+name|substring
+argument_list|(
+literal|"latest."
+operator|.
+name|length
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|String
+name|foundStatus
+init|=
+name|foundMrid
+operator|.
+name|getRevision
+argument_list|()
+operator|.
+name|substring
+argument_list|(
+literal|"latest."
+operator|.
+name|length
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|List
+name|statuses
+init|=
+name|StatusManager
+operator|.
+name|getCurrent
+argument_list|()
+operator|.
+name|getStatuses
+argument_list|()
+decl_stmt|;
+return|return
+name|statuses
+operator|.
+name|indexOf
+argument_list|(
+name|askedStatus
+argument_list|)
+operator|-
+name|statuses
+operator|.
+name|indexOf
+argument_list|(
+name|foundStatus
+argument_list|)
 return|;
 block|}
 block|}
