@@ -336,6 +336,30 @@ name|XmlModuleUpdaterTest
 extends|extends
 name|TestCase
 block|{
+specifier|protected
+name|void
+name|tearDown
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|super
+operator|.
+name|tearDown
+argument_list|()
+expr_stmt|;
+name|XmlModuleDescriptorUpdater
+operator|.
+name|LINE_SEPARATOR
+operator|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"line.separator"
+argument_list|)
+expr_stmt|;
+block|}
 specifier|public
 name|void
 name|testUpdate
@@ -2281,6 +2305,187 @@ name|length
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+comment|// IVY-1356
+specifier|public
+name|void
+name|testMergedUpdateWithExtendsAndExcludes
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|URL
+name|url
+init|=
+name|XmlModuleUpdaterTest
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"test-extends-dependencies-exclude.xml"
+argument_list|)
+decl_stmt|;
+name|XmlModuleDescriptorParser
+name|parser
+init|=
+name|XmlModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+decl_stmt|;
+name|ModuleDescriptor
+name|md
+init|=
+name|parser
+operator|.
+name|parseDescriptor
+argument_list|(
+operator|new
+name|IvySettings
+argument_list|()
+argument_list|,
+name|url
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|ByteArrayOutputStream
+name|buffer
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|()
+decl_stmt|;
+name|XmlModuleDescriptorUpdater
+operator|.
+name|update
+argument_list|(
+name|url
+argument_list|,
+name|buffer
+argument_list|,
+name|getUpdateOptions
+argument_list|(
+literal|"release"
+argument_list|,
+literal|"mynewrev"
+argument_list|)
+operator|.
+name|setMerge
+argument_list|(
+literal|true
+argument_list|)
+operator|.
+name|setMergedDescriptor
+argument_list|(
+name|md
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ModuleDescriptor
+name|updatedMd
+init|=
+name|parser
+operator|.
+name|parseDescriptor
+argument_list|(
+operator|new
+name|IvySettings
+argument_list|()
+argument_list|,
+operator|new
+name|ByteArrayInputStream
+argument_list|(
+name|buffer
+operator|.
+name|toByteArray
+argument_list|()
+argument_list|)
+argument_list|,
+operator|new
+name|BasicResource
+argument_list|(
+literal|"test"
+argument_list|,
+literal|false
+argument_list|,
+literal|0
+argument_list|,
+literal|0
+argument_list|,
+literal|false
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|DependencyDescriptor
+index|[]
+name|deps
+init|=
+name|updatedMd
+operator|.
+name|getDependencies
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+literal|"Dependencies shouldn't be null"
+argument_list|,
+name|deps
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Number of dependencies is incorrect"
+argument_list|,
+literal|2
+argument_list|,
+name|deps
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+comment|// test indentation
+name|String
+name|updatedXml
+init|=
+name|buffer
+operator|.
+name|toString
+argument_list|()
+decl_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|updatedXml
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|updatedXml
+operator|.
+name|indexOf
+argument_list|(
+name|XmlModuleDescriptorUpdater
+operator|.
+name|LINE_SEPARATOR
+operator|+
+literal|"\t\t<dependency org=\"myorg\" name=\"mymodule1\" rev=\"1.0\" conf=\"default->default\"/>"
+operator|+
+name|XmlModuleDescriptorUpdater
+operator|.
+name|LINE_SEPARATOR
+argument_list|)
+operator|!=
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
 block|}
 specifier|private
 name|UpdateOptions
